--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Get the W&B artifact path
-        uses: ./.github/actions/define_artifact
+        uses: .github/actions/define_artifact
 
       - name: Setup Python version
         uses: actions/setup-python@v2
