--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
 name: GitHub Actions Demo
 on: [push]
 jobs:
-  W&B-Kaggle:
+  wandb-kaggle:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
