--- a/.github/actions/download_artifact/action.yml
+++ b/.github/actions/download_artifact/action.yml
@@ -10,5 +10,11 @@ runs:
   steps:
     - run: echo Artifact Path ${{ inputs.artifact_path }}.
       shell: bash
-    - run: python download_model_artifact.py --artifact_name ${{ inputs.artifact_path }}
+    - run: 
+        output = $(python download_model_artifact.py --artifact_name ${{ inputs.artifact_path }})
+        echo "::set-output name=artifact_dir::$output"
+      shell: bash
+      id: get_artifact_dir
+    - name: Print Artifact Dir
+      run: echo "${{ steps.get_artifact_dir.outputs.artifact_dir }}"
       shell: bash
