--- a/.github/actions/download_artifact/action.yml
+++ b/.github/actions/download_artifact/action.yml
@@ -10,7 +10,7 @@ runs:
   steps:
     - run: echo Artifact Path ${{ inputs.artifact_path }}.
       shell: bash
-    - run: 
+    - run: |
         output = $(python download_model_artifact.py --artifact_name ${{ inputs.artifact_path }})
         echo "::set-output name=artifact_dir::$output"
       shell: bash
