--- a/.github/actions/download_artifact/action.yml
+++ b/.github/actions/download_artifact/action.yml
@@ -11,10 +11,10 @@ runs:
     - run: echo Artifact Path ${{ inputs.artifact_path }}.
       shell: bash
     - run: |
-        output = $(python download_model_artifact.py --artifact_name ${{ inputs.artifact_path }})
-        echo "::set-output name=artifact_dir::${echo $output}"
+        echo $(python download_model_artifact.py --artifact_name ${{ inputs.artifact_path }})
+        # echo "::set-output name=artifact_dir::${echo $output}"
       shell: bash
-      id: get_artifact_dir
-    - name: Print Artifact Dir
-      run: echo "${{ steps.get_artifact_dir.outputs.artifact_dir }}"
-      shell: bash
+      # id: get_artifact_dir
+    # - name: Print Artifact Dir
+    #   run: echo "${{ steps.get_artifact_dir.outputs.artifact_dir }}"
+    #   shell: bash
