--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,10 +28,15 @@ jobs:
         run: |
           ls ${{ github.workspace }}
 
-      - name: Download Model
+      - id: download
+        name: Download Model
         uses: ./.github/actions/download_artifact
         with:
           artifact_path: 'ayut/sr_ffhq/3jygvqe3_model'
+
+      - name: Print W&B Artifact Dir Path
+        run: echo path ${{ steps.download.outputs.artifact_dir_path}}
+        shell: bash
 
       - name: Upload as Kaggle Dataset
         shell: bash
