--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -23,10 +23,6 @@ jobs:
           WANDB_API: ${{ secrets.WANDB_KEY }}
         run: |
           wandb login "$WANDB_API"
-      
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
 
       - id: download
         name: Download Model
@@ -35,7 +31,7 @@ jobs:
           artifact_path: 'ayut/sr_ffhq/3jygvqe3_model'
 
       - name: Print W&B Artifact Dir Path
-        run: echo path ${{ steps.download.outputs.artifact_dir_path}}
+        run: echo path ${{ steps.download.outputs.artifact_model_name}}
         shell: bash
 
       - name: Upload as Kaggle Dataset
