--- a/.github/actions/download_artifact/action.yml
+++ b/.github/actions/download_artifact/action.yml
@@ -15,7 +15,7 @@ runs:
     - run: echo Artifact Path ${{ inputs.artifact_path }}.
       shell: bash
     - name: Run download_model_artifact.py
-      run: python download_model_artifact.py --artifact_name ${{ inputs.artifact_path }})"
+      run: python download_model_artifact.py --artifact_name ${{ inputs.artifact_path }}
       shell: bash
     - name: Get target dir to be uploaded as Kaggle dataset
       id: target_path
