--- a/.github/actions/download_artifact/action.yml
+++ b/.github/actions/download_artifact/action.yml
@@ -21,5 +21,5 @@ runs:
       id: target_path
       run: |
         IFS='/' read -r -a array <<< "${{ inputs.artifact_path }}"
-        echo "::set-output name=artifact_model_name::$(echo ${array[0]})"
+        echo "::set-output name=artifact_model_name::$(echo ${{ array[0]} })"
       shell: bash
