--- a/.github/actions/download_artifact/action.yml
+++ b/.github/actions/download_artifact/action.yml
@@ -8,7 +8,7 @@ inputs:
 outputs:
   artifact_dir_path:
     description: "Path to the Artifact Directory to be uploaded as Kaggle Dataset."
-    value: ".artifact/${{ steps.target_path.outputs.artifact_model_name}}"
+    value: ".artifact/${{ steps.target_path.outputs._2}}"
 runs:
   using: "composite"
   steps:
@@ -19,7 +19,8 @@ runs:
       shell: bash
     - name: Get target dir to be uploaded as Kaggle dataset
       id: target_path
-      run: |
-        IFS='/' read -r -a array <<< "${{ inputs.artifact_path }}"
-        echo "::set-output name=artifact_model_name::$(echo $array[0])"
+      uses: jungwinter/split@v2
+      with:
+        msg: {{ inputs.artifact_path }}
+        separator: '/'
       shell: bash
