--- a/.github/actions/download_artifact/action.yml
+++ b/.github/actions/download_artifact/action.yml
@@ -21,5 +21,5 @@ runs:
       id: target_path
       uses: jungwinter/split@v2
       with:
-        msg: {{ inputs.artifact_path }}
+        msg: ${{ inputs.artifact_path }}
         separator: '/'
