--- a/.github/actions/download_artifact/action.yml
+++ b/.github/actions/download_artifact/action.yml
@@ -18,6 +18,10 @@ runs:
   steps:
     - run: echo Artifact Path ${{ inputs.artifact_name }}.
       shell: bash
+    - uses: jungwinter/split@v2
+      id: split
+      with:
+        msg: ${{ inputs.artifact_name }}
     - name: Run download_model_artifact.py
-      run: python download_model_artifact.py --artifact_name ${{ inputs.artifact_name }} --root_path ${{ inputs.root_path }}
+      run: python download_model_artifact.py --artifact_name ${{ inputs.artifact_name }} --root_path ${{ inputs.root_path }} / ${{ steps.split.outputs._2 }}
       shell: bash
