--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,6 +2,7 @@ name: GitHub Actions Demo
 on: [push]
 jobs:
   wandb-kaggle:
+    if: github.event.head_commit.message == 'wandb-to-kaggle'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
