--- a/.github/actions/download_artifact/action.yml
+++ b/.github/actions/download_artifact/action.yml
@@ -1,29 +1,62 @@
 name: 'Download the model saved as W&B Artifact'
 description: 'Provide the name of the W&B model artifact where the model is saved. You can find it by visiting the artifact page of your W&B workspace.'
+
 inputs:
   artifact_name:
     description: 'Name of the W&B artifact in the format <wandb profile id>/<wandb project name>/<artifact name>'
     required: true
     default: 'ayut/sr_ffhq/3jygvqe3_model'
+
   root_path:
     description: 'Path where the model will be downloaded'
     required: false
     default: 'model'
+
+  id:
+    description: "Dataset identifier in format {username}/{dataset})."
+    required: false
+    default: "{KAGGLE_USERNAME}/{GITHUB_REPO_NAME}"
+
+  title:
+    description: "Title of the dataset, only if it has to be created."
+    required: false
+    default: "dataset id"
+
+  is_public:
+    description: "Create publicly (default is private)."
+    required: false
+    default: False
+
 outputs:
   artifact_dir_path:
     description: "Path to the Artifact Directory to be uploaded as Kaggle Dataset."
     value: ./${{ inputs.root_path  }}
+
 runs:
   using: "composite"
   steps:
     - run: echo Artifact Path ${{ inputs.artifact_name }}.
       shell: bash
+
     - uses: jungwinter/split@v2
       id: split
       with:
         msg: ${{ inputs.artifact_name }}
+
     - run: echo ${{ steps.split.outputs._2 }}
       shell: bash
+
     - name: Run download_model_artifact.py
       run: python download_model_artifact.py --artifact_name ${{ inputs.artifact_name }} --root_path ${{ inputs.root_path }}
       shell: bash
+
+    - name: Upload as Kaggle Dataset
+      uses: jaimevalero/push-kaggle-dataset@v1.0.2
+      env:
+        KAGGLE_USERNAME: ${{ secrets.KAGGLE_USERNAME }}
+        KAGGLE_KEY: ${{ secrets.KAGGLE_KEY }}
+      with:
+        id: ${{ inputs.id }}
+        title: ${{ inputs.title }}
+        files: ${{ outputs.artifact_dir_path }}
+        is_public: ${{ inputs.is_public }}
