--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,10 @@ jobs:
         with:
           packages: wandb kaggle
 
-      - name: Loging W&B and Kaggle
+      - name: Loging W&B
         shell: bash
         env:
           WANDB_API: ${{ secrets.WANDB_KEY }}
-          KAGGLE_USERNAME: ${{ secrets.KAGGLE_USERNAME }}
-          KAGGLE_KEY: ${{ secrets.KAGGLE_KEY }}
         run: wandb login "$WANDB_API"
 
       - name: Download and Upload
@@ -30,3 +28,5 @@ jobs:
           id: 'ayut/test-dataset'
           title: 'Testing github actions for uploading datasets'
           is_public: true
+          kaggle_username: ${{ secrets.KAGGLE_USERNAME }}
+          kaggle_key: ${{ secrets.KAGGLE_KEY }}
