--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
 name: 'W&B Artifact to Kaggle Dataset'
 description: 'Upload the model saved as W&B Artifact to Kaggle Dataset'
+branding:
+  icon: 'box'  
+  color: 'blue'
 
 inputs:
   artifact_name:
