Ubiquant RNN Models

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
       - name: Download and Upload
         uses: ayulockin/wandb2kaggle@v1
         with:
-          artifact_name: 'ayut/ubiquant_kaggle/Baseline_LGBM'
-          id: 'ayuraj/ubiquant-lgbm'
-          title: 'Ubiquant LightGBM Models'
+          artifact_name: 'ayut/ubiquant_kaggle/Baseline_RNN'
+          id: 'ayuraj/ubiquant-rnn'
+          title: 'Ubiquant RNN Models'
           is_public: true
           kaggle_username: ${{ secrets.KAGGLE_USERNAME }}
           kaggle_key: ${{ secrets.KAGGLE_KEY }}
